Use getFirst and getLast